--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,10 +1,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: '123abcdefgh'
 
-# one:
-#   name: MyString
-#   email: MyString
-#
-# two:
-#   name: MyString
-#   email: MyString
-# we won't need fixtures until chapter8
+  # one:
+  #   name: MyString
+  #   email: MyString
+  #
+  # two:
+  #   name: MyString
+  #   email: MyString
+  # we won't need fixtures until chapter8
