--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,13 +2,26 @@
 one:
   name: Michael Example
   email: michael@example.com
-  password_digest: '$2a$10$zFylxr8V21VOdacs.aiV6eselg5bZauFSimalFJR0CDPqxsGiqXpC'
+  password_digest: <%= User.digest('password') %>
 
-  # one:
-  #   name: MyString
-  #   email: MyString
-  #
-  # two:
-  #   name: MyString
-  #   email: MyString
-  # we won't need fixtures until chapter8
+archer:
+  name: Otis Sandoval
+  email: otis@example.com
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+
+malory:
+  name: Malory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
